=== master

* Allow overriding the stat reporter used via Minitest.parallel_fork_stat_reporter method (jeremyevans) (#3)

=== 1.0.2 (2017-02-27)

* Show correct number of errors in output (jeremyevans)

=== 1.0.1 (2017-01-05)

* Work with test suites that use parallelize_me! (jeremyevans) (#1)

=== 1.0.0 (2015-05-11)

* Initial Public Release