@@ -1,6 +1,6 @@
 spec = Gem::Specification.new do |s|
   s.name = 'minitest-parallel_fork'
-  s.version = '1.0.2'
+  s.version = '1.0.3'
   s.platform = Gem::Platform::RUBY
   s.has_rdoc = true
   s.extra_rdoc_files = ["README.rdoc", "CHANGELOG", "MIT-LICENSE"]
@@ -20,5 +20,5 @@ and can work in cases where Minitest's default thread-based parallelism do not w
 such as when specs modify the constant namespace.
 END
 
-  s.add_development_dependency "minitest", '>5'
+  s.add_development_dependency "minitest", '>5.11.0'
 end
