@@ -1,5 +1,7 @@
 === master
 
+* Remove DumpableUnexpectedError, require minitest 5.11.0+ (jeremyevans)
+
 * Allow overriding the stat reporter used via Minitest.parallel_fork_stat_reporter method (jeremyevans) (#3)
 
 === 1.0.2 (2017-02-27)
